target/classes/META-INF/fabric8/openshift/master-deployment-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: b567e26070264318f8471bf9aea5833a840b9678
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=limbo&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-con-url: scm:git:git@git.namics.com:namics/limbo.git
    fabric8.io/scm-url: https://git.namics.com/namics/limbo
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/scm-devcon-url: scm:git:git@git.namics.com:namics/limbo.git
    fabric8.io/scm-tag: HEAD
    fabric8.io/docs-url: dav:https://nexus.namics.com/repository/namics-projects-sites/com.namics/limbo/0.0.1-SNAPSHOT
  labels:
    branch: master
    app: limbo
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.namics
  name: master-deployment
  namespace: namics
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    branch: master
    app: limbo
    provider: fabric8
    group: com.namics
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: b567e26070264318f8471bf9aea5833a840b9678
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=limbo&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-con-url: scm:git:git@git.namics.com:namics/limbo.git
        fabric8.io/scm-url: https://git.namics.com/namics/limbo
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-devcon-url: scm:git:git@git.namics.com:namics/limbo.git
        fabric8.io/scm-tag: HEAD
        fabric8.io/docs-url: dav:https://nexus.namics.com/repository/namics-projects-sites/com.namics/limbo/0.0.1-SNAPSHOT
      labels:
        branch: master
        app: limbo
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.namics
    spec:
      containers:
      - env:
        - name: ACTIVE_PROFILES
          valueFrom:
            configMapKeyRef:
              key: active-profiles
              name: master-config-map
        - name: TIME_ZONE
          valueFrom:
            configMapKeyRef:
              key: time-zone
              name: master-config-map
        - name: JAVA_OPTS
          value: -Dspring.profiles.active=$(ACTIVE_PROFILES) -Duser.timezone=$(TIME_ZONE)
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: docker-repo.namics.com/namics-limbo/tomcat:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: master-tomcat
        ports:
        - containerPort: 9443
          name: tungsten-https
        - containerPort: 9080
          name: glrpc
        - containerPort: 8080
          name: http
        - containerPort: 8009
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /share
          name: data-tomcat
      imagePullSecrets:
      - name: docker-repo-namics-space
      volumes:
      - hostPath:
          path: /export/tomcat
        name: data-tomcat
  triggers:
  - type: ConfigChange
